# AeroThrustTechnics_bot

./: .env.example  .env.production.example  .gitignore  README.md  README_FOR_CODEX.md  docker-compose.prod.yml  docker-compose.yml
admin/: Dockerfile.prod  README.md  (+5 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/aerotrust_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260421_0001_initial_schema.py  20260421_0002_admin_api_indexes.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: admin_reports.py
backend/app/bot/: constants.py  runner.py  texts.py
backend/app/bot/handlers/: menu.py  report_flow.py  report_status.py  start.py
backend/app/bot/keyboards/: main_menu.py  report.py  report_status.py
backend/app/core/: config.py  reporting.py  security.py
backend/app/models/: admin_user.py  attachment.py  enums.py  invite_code.py  report.py
backend/app/repositories/: admin_analytics.py  admin_reports.py  admin_users.py  invite_codes.py  reports.py  users.py
backend/app/schemas/: admin_auth.py
backend/app/scripts/: create_admin_user.py
backend/app/services/: admin_auth_service.py  admin_reports_service.py  audit_service.py  report_service.py  upload_service.py  user_reports_service.py
backend/tests/: test_rate_limit.py  test_report_flow_attachments.py
backend/tests/integration/: conftest.py  test_admin_analytics.py  test_admin_audit.py  test_admin_auth.py  test_admin_reports.py  test_report_attachments.py  test_user_reports_access.py
(+27 files in other folders)
