[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerotrust-backend"
version = "0.1.0"
description = "Backend foundation for Aerotrust Trusted Messages MVP"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7.0,<4.0.0",
  "alembic>=1.13.1,<2.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "psycopg[binary]>=3.1.18,<4.0.0",
  "redis>=5.0.3,<6.0.0",
  "sqlalchemy>=2.0.29,<3.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.1.1,<9.0.0",
  "pytest-asyncio>=0.23.6,<1.0.0"
]

[project.scripts]
run-api = "app.main:run"
run-bot = "app.bot.runner:run"
create-admin-user = "app.scripts.create_admin_user:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
